2012-07-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-create-page): Show raw contents briefly, not fully, when
	prompting a user for the content type.

2012-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-rendering-half-dump): Add name anchors fast.

2012-07-10  Naohiro Aota  <naota@elisp.net>

	* w3m.el: (w3m-data-retrieve): URL-decode data-string. It can have
	"%2b%2d%3d" representing "/+=".

2012-07-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-rendering-half-dump): Add name anchors that w3m can
	handle in nested tags.

2012-07-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-view-url-with-external-browser): Improve prompt string.
	Suggested by Dan Jacobson <jidanni@jidanni.org>.

2012-06-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-active-region-or-url-at-point, w3m-print-this-url):
	Try to pick #name anchor out.

	* w3m-search.el (w3m-search-read-variables): Make commands that use it
	error out when other processes run in the current w3m buffer.

	* w3m.el (w3m-mode): Add description of some missing commands to doc.

2012-06-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-create-page): Safely quit session when a user hits C-g;
	make sure to set w3m-current-url.

2012-06-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-cache-header, w3m-cache-request-header)
	(w3m-cache-contents, w3m-cache-request-contents)
	(w3m-cache-available-p): Canonicalize given url.
	(w3m-show-error-information): Show as many info as possible.

2012-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-popup-buffer): Do nothing for the current buffer.

	* w3m.el (w3m-history-highlight-current-url): Extend href anchor to bol.

	* w3m.el (w3m-http-status-alist): New variable.
	(w3m-http-status): New variable.
	(w3m-w3m-retrieve): Set it.
	(w3m-retrieve): Clear it.
	(w3m-download, w3m-retrieve-and-render, w3m-show-error-information):
	Show http status if download or retrieving fails.
